# n_body_simulation

./: CMakeLists.txt  LICENSE  README.md
include/: n_body_simulation.h  particle.h  vector2d.h
src/: main.cpp  n_body_simulation.cpp  particle.cpp
